# newton

./: CHANGELOG.md  CLAUDE.md  _test_tetgen_basic.py
docs/: remesh-skinning-changelog.md  vbd_pipeline.md  voxel_tet_pr.md
docs/api/: newton_solvers.rst
newton/: geometry.py  solvers.py  utils.py
newton/_src/geometry/: __init__.py  broad_phase_bvh.py  broad_phase_nxn.py  broad_phase_sap.py  collision_convex.py  collision_core.py  contact_reduction_global.py  mpr.py  multicontact.py  narrow_phase.py  simplex_solver.py  support_function.py  tetgen.py
newton/_src/sim/: builder.py  collide.py  model.py
newton/_src/softbody/: __init__.py  _voxelize_native.py  (+1 more)
newton/_src/softbody/native/: CMakeLists.txt  nt_box_triangle.h  nt_bvh.h  nt_marching_cubes_table.h  nt_multi_list.h  nt_physx_aabb_tree.cpp  nt_physx_aabb_tree.h  nt_physx_distance_tetrahedron.h  nt_physx_tetmesh_traversal.h  nt_pybind.cpp  nt_remesher.cpp  nt_remesher.h  nt_skinning.cpp  nt_skinning.h  nt_types.h  nt_union_find.cpp  nt_union_find.h  nt_voxel_tet.cpp  nt_voxel_tet.h
newton/examples/: __init__.py
newton/tests/: test_broad_phase.py  test_collision_pipeline.py  test_gjk.py  test_remesh_skinning.py  test_solver_ipc.py  test_tetrahedralization_python.py  test_voxel_tet.py
plan/: performance-acceleration-analysis.md
plan/collision-optimization/: 01-overview.md  02-phase1-bvh-broadphase.md  03-phase2-aabb-cache.md  04-phase3-hill-climbing.md  05-data-structures.md  06-call-chain.md  07-warp-caveats.md  08-demos-and-tests.md  README.md
scripts/: build_voxel_tet.py  profile_collision.py
(+58 files in other folders)
